--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthewzzz</title>
+    <title>Matthewzzz </title>
 </head>
 <body>
-    
+    <p>Nice</p>
 </body>
 </html>
